"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-11-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-50:
	  No source revision.  Top-level configure patches Makefile to
		make it safer to "test && mkdir" during parallel installs.  


2006-11-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-49-merged-instance-02-31:
	  Branch merge.
	  Summary: major memory reduction in run-time and object binary size.  
		Added collection_interface as root abstract class per meta
		type of collection.  From this spawn the former 
		instance_collection and port_actuals_collection.
		port_actuals_collection is lightweight collection that uses 
		a reference to a formal collection for size/type information.  
	  Footprints are now heap-allocated making life much simpler/easier.  
	  Footprints are now responsible for allocating all collections
		in pools (called collection-pool-bundles).  
		Consequently, footprints are used to translate between
		pointers and indices.  
	  test/quarantine/mem-01.hac shows object size reduction of
		5x to 10x depending on the phase.  


2006-11-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-45-instance-02-31:
	  Perm'd !POOL_ALLOCATE_{INSTANCE,VALUE}_COLLECTIONS, because 
		they are no longer relevant, pool-management is done
		by collection pool bundles.  (-200 LoC)
	  Branch status: complete, ready to merge up.


	* HACKT-00-01-04-main-00-80-45-instance-02-30:
	  Perm'd POOL_ALLOCATE_ALL_COLLECTIONS_PER_FOOTPRINT (-2000 LoC).
		Summary: All instance/value collections (formal or actual, 
		sparse or dense) are now managed by the footprint_base
		class which is a wrapper around collection pool bundles. 
		By managing these collections with pool bundles, this saves
		from having to allocate them onto the heap, which is where