@@ -3,6 +3,14 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2006-11-10	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-80-51:
+	  Checked against g++-4.2-20061107, with -O3.
+		Included multikey_map.tcc in footprint_value_base.cc
+		for an optimized-away destructor symbol.
+
+
 2006-11-07	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-80-50:
